=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.34-dev



=item 1.33 September 14, 2010

Propagate APACHE_TEST_NO_STICKY_PREFERENCES to the Apache environment
for mod_perl configurations (Apache::TestConfigPerl),
http://www.gossamer-threads.com/lists/modperl/dev/101929
[Torsten Foertsch]

Provide build/test environment for modules bundled with mod_perl like
Apache::Reload and Apache::SizeLimit
[Torsten Foertsch]

The CN in server certificates generated by Apache::TestSSLCA will now
match the servername passed to t/TEST.
[Joe Orton]

Add check for automated testing environment variable before prompting
with EU::MM to quit the test suite.  Some automated smoke tests were
failed because the EU::MM prompt was timing out.
[Adam Prime, Fred Moyer]

https://rt.cpan.org/Public/Bug/Display.html?id=32993
use TAP::Harness for Apache::TestHarnessPHP
[Mark A. Hershberger]

https://rt.cpan.org/Public/Bug/Display.html?id=54476
Fix error where non root user gets test failure with httpd suexec and mod_fcgid
[Peter (Stig) Edwards]

=item 1.32 April 15, 2010

Fix issue with recent feature where lack of libapreq resulted in test failure.
[Philippe M. Chiasson]

Added t_{start,read,finish}_file_watch to Apache::TestUtil [Torsten Foertsch]

=item 1.31 February 24, 2010

Modify need_cgi so that it looks for cgi.c instead of cgi.  This is a fix
for the case insensitive filesystem correction listed below.
[Phillipe M. Chiasson]

t/next_available_port.t doesn't need mod_cgid, use need_cgi instead
of need_module('mod_cgi.c')
[Philippe M. Chiasson]

PR: 21554
Load mod_apreq2.so if it is available
[Derek Price, <derek@ximbiot.com>]

Add conditional to ignore IfVersion directive if mod_version is not built.
[Adam Prime <adam.prime@utoronto.ca>, Fred Moyer <phred@apache.org>]

PR: 41239
t/TEST -ping does not return a valid return code to the calling shell
[ozw1z5rd <alessio.palma@staff.dada.net>]
